Added function to collect the dataset statistics

--- a/jupyter_notebooks/01_DataCollection.ipynb
+++ b/jupyter_notebooks/01_DataCollection.ipynb
@@ -27,18 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce5abcb4-25be-4760-aefb-d911a529ef0f",
-   "metadata": {},
-   "source": [
-    "> ⚠️ This notebook assumes required packages are installed. Please run:\n",
-    "\n",
-    "> `pip install -r requirements.txt`\n",
-    "\n",
-    "> to install dependencies before proceeding."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "18327354-bf11-4c08-a5fa-037fcd096173",
    "metadata": {},
    "source": [
@@ -47,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6598c5ec-25db-40fc-bf09-72b51cf9c398",
    "metadata": {},
    "outputs": [],
@@ -130,6 +118,70 @@
     "with zipfile.ZipFile(\"inputs/cherry_leaves/cherry-leaves.zip\", 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"inputs/cherry_leaves/\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61c113b6-3e85-4a71-8499-fd79fac5350a",
+   "metadata": {},
+   "source": [
+    "### Dataset Statistics Collection\n",
+    "We count the total number of images in each class (healthy vs infected cherry leaves) and save the statistics for use in the Streamlit dashboard metrics.\n",
+    "- 📌 **Insight:** This provides essential dataset overview information including total size and class distribution balance for model development planning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "afb062de-3af8-41ca-9687-e859ea8973ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset stats saved to outputs/dataset_stats.json\n",
+      "Total Images: 4208\n",
+      "Healthy Leaves: 2104\n",
+      "Infected Leaves: 2104\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "\n",
+    "# Count images in each folder\n",
+    "healthy_path = \"../inputs/cherry_leaves/cherry-leaves/healthy\"\n",
+    "infected_path = \"../inputs/cherry_leaves/cherry-leaves/powdery_mildew\"\n",
+    "\n",
+    "healthy_count = len(os.listdir(healthy_path))\n",
+    "infected_count = len(os.listdir(infected_path))\n",
+    "total_count = healthy_count + infected_count\n",
+    "\n",
+    "# Create results dictionary\n",
+    "dataset_stats = {\n",
+    "    \"total_images\": total_count,\n",
+    "    \"healthy_leaves\": healthy_count,\n",
+    "    \"powdery_mildew_leaves\": infected_count\n",
+    "}\n",
+    "\n",
+    "# Save to JSON file\n",
+    "with open(\"../outputs/dataset_stats.json\", \"w\") as f:\n",
+    "    json.dump(dataset_stats, f, indent=2)\n",
+    "\n",
+    "print(f\"Dataset stats saved to outputs/dataset_stats.json\")\n",
+    "print(f\"Total Images: {total_count}\")\n",
+    "print(f\"Healthy Leaves: {healthy_count}\")\n",
+    "print(f\"Infected Leaves: {infected_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4004124d-57e1-4537-9441-4a6e0dc581b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
