Updated kaggle url link in 01_DataCollection.ipynb to use ellipsis and avoid exposing the full address

--- a/jupyter_notebooks/01_DataCollection.ipynb
+++ b/jupyter_notebooks/01_DataCollection.ipynb
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset URL: https://www.kaggle.com/datasets/codeinstitute/cherry-leaves\n",
+      "Dataset URL: https://www.kaggle.com/datasets/...\n",
       "License(s): unknown\n",
       "Downloading cherry-leaves.zip to inputs/cherry_leaves\n",
       "  0%|                                               | 0.00/55.0M [00:00<?, ?B/s]\n",
