Updated Module in ModelEvaluation.py

--- a/jupyter_notebooks/06_ModelEvaluation.ipynb
+++ b/jupyter_notebooks/06_ModelEvaluation.ipynb
@@ -543,6 +543,68 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d45b4ce-6b99-48e1-98b3-b2844c69d42a",
+   "metadata": {},
+   "source": [
+    "### Consolidating Evaluation Data\n",
+    "\n",
+    "Load 4 separate JSON evaluation files\n",
+    " - (performance summary,\n",
+    " - classification report,\n",
+    " - confusion matrix,\n",
+    " - ROC data) and\n",
+    "combined into a single dictionary.\n",
+    "\n",
+    "Saved as `evaluation.pkl` using joblib for efficient storage of ML evaluation results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f6fb2b9f-fbfa-4c61-8bec-fb7d34ffb695",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ evaluation.pkl created.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import joblib\n",
+    "\n",
+    "# Load JSONs\n",
+    "with open(\"../outputs/performance_summary.json\", \"r\") as f:\n",
+    "    perf_summary = json.load(f)\n",
+    "\n",
+    "with open(\"../outputs/classification_report.json\", \"r\") as f:\n",
+    "    class_report = json.load(f)\n",
+    "\n",
+    "with open(\"../outputs/confusion_matrix.json\", \"r\") as f:\n",
+    "    confusion_matrix = json.load(f)\n",
+    "\n",
+    "with open(\"../outputs/roc_data.json\", \"r\") as f:\n",
+    "    roc_data = json.load(f)\n",
+    "\n",
+    "# Combine into one dict\n",
+    "evaluation = {\n",
+    "    \"performance_summary\": perf_summary,\n",
+    "    \"classification_report\": class_report,\n",
+    "    \"confusion_matrix\": confusion_matrix,\n",
+    "    \"roc_data\": roc_data\n",
+    "}\n",
+    "\n",
+    "# Save to .pkl\n",
+    "joblib.dump(evaluation, \"../outputs/evaluation.pkl\")\n",
+    "\n",
+    "print(\"✅ evaluation.pkl created.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "010a9e52-5a86-484d-a88a-c8da6091ceda",
    "metadata": {},
    "source": [
