Updated inputs zipfile path in 01_DataCollection.ipynb

--- a/jupyter_notebooks/01_DataCollection.ipynb
+++ b/jupyter_notebooks/01_DataCollection.ipynb
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "import zipfile\n",
-    "with zipfile.ZipFile(\"inputs/cherry_leaves/cherry-leaves.zip\", 'r') as zip_ref:\n",
+    "with zipfile.ZipFile(\"../inputs/cherry_leaves/cherry-leaves.zip\", 'r') as zip_ref:\n",
     "    zip_ref.extractall(\"inputs/cherry_leaves/\")"
    ]
   },
