Updated sample prediction layout in 06_ModelEvaluation.ipynb

--- a/jupyter_notebooks/06_ModelEvaluation.ipynb
+++ b/jupyter_notebooks/06_ModelEvaluation.ipynb
@@ -765,7 +765,8 @@
     "num_preds = 3\n",
     "\n",
     "# Create subplots\n",
-    "fig, axes = plt.subplots(1, num_preds, figsize=(5 * num_preds, 5))\n",
+    "fig, axes = plt.subplots(2, 4, figsize=(25, 10))\n",
+    "axes = axes.flatten()  # Convert 2D array to 1D for easy indexing\n",
     "\n",
     "for i in range(num_preds):\n",
     "    label = random.choice(labels)\n",
