Updated output dir path for roc_data.json in 06_ModelEvaluation.ipynb

--- a/jupyter_notebooks/06_ModelEvaluation.ipynb
+++ b/jupyter_notebooks/06_ModelEvaluation.ipynb
@@ -513,6 +513,7 @@
     "from sklearn.metrics import roc_curve, auc\n",
     "\n",
     "# Calculate ROC data\n",
+    "output_dir = Path(\"../outputs\")\n",
     "fpr, tpr, thresholds = roc_curve(val_labels, val_predictions)\n",
     "roc_auc = auc(fpr, tpr)\n",
     "\n",
