updated models to use Adam optimizer

--- a/jupyter_notebooks/05_Modeling.ipynb
+++ b/jupyter_notebooks/05_Modeling.ipynb
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-05 01:31:56.410172: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-06-05 03:42:14.534203: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -47,7 +47,8 @@
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Dropout, GlobalAveragePooling2D\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "import json, pickle"
+    "import json, pickle\n",
+    "from tensorflow.keras.optimizers.legacy import Adam"
    ]
   },
   {
@@ -93,7 +94,7 @@
    "outputs": [],
    "source": [
     "# model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
+    "model.compile(optimizer=Adam(learning_rate=0.001), loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
@@ -280,7 +281,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "120/120 [==============================] - 264s 2s/step - loss: 0.5067 - accuracy: 0.7188 - val_loss: 0.1494 - val_accuracy: 0.9729\n",
+      "120/120 [==============================] - 158s 1s/step - loss: 0.4711 - accuracy: 0.7613 - val_loss: 0.0852 - val_accuracy: 0.9828\n",
       "Epoch 2/20\n"
      ]
     },
@@ -296,25 +297,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120/120 [==============================] - 170s 1s/step - loss: 0.1151 - accuracy: 0.9675 - val_loss: 0.0836 - val_accuracy: 0.9848\n",
+      "120/120 [==============================] - 159s 1s/step - loss: 0.0723 - accuracy: 0.9804 - val_loss: 0.1364 - val_accuracy: 0.9729\n",
       "Epoch 3/20\n",
-      "120/120 [==============================] - 172s 1s/step - loss: 0.0435 - accuracy: 0.9877 - val_loss: 0.0874 - val_accuracy: 0.9808\n",
+      "120/120 [==============================] - 168s 1s/step - loss: 0.0422 - accuracy: 0.9853 - val_loss: 0.0476 - val_accuracy: 0.9894\n",
       "Epoch 4/20\n",
-      "120/120 [==============================] - 194s 2s/step - loss: 0.0737 - accuracy: 0.9788 - val_loss: 0.0440 - val_accuracy: 0.9887\n",
+      "120/120 [==============================] - 169s 1s/step - loss: 0.0247 - accuracy: 0.9927 - val_loss: 0.0272 - val_accuracy: 0.9927\n",
       "Epoch 5/20\n",
-      "120/120 [==============================] - 174s 1s/step - loss: 0.0228 - accuracy: 0.9919 - val_loss: 0.0250 - val_accuracy: 0.9914\n",
+      "120/120 [==============================] - 159s 1s/step - loss: 0.0585 - accuracy: 0.9809 - val_loss: 0.0507 - val_accuracy: 0.9868\n",
       "Epoch 6/20\n",
-      "120/120 [==============================] - 176s 1s/step - loss: 0.0246 - accuracy: 0.9906 - val_loss: 0.0020 - val_accuracy: 1.0000\n",
+      "120/120 [==============================] - 158s 1s/step - loss: 0.0314 - accuracy: 0.9924 - val_loss: 0.0690 - val_accuracy: 0.9841\n",
       "Epoch 7/20\n",
-      "120/120 [==============================] - 179s 1s/step - loss: 0.0342 - accuracy: 0.9901 - val_loss: 0.0433 - val_accuracy: 0.9854\n",
+      "120/120 [==============================] - 155s 1s/step - loss: 0.0112 - accuracy: 0.9979 - val_loss: 0.0046 - val_accuracy: 0.9980\n",
       "Epoch 8/20\n",
-      "120/120 [==============================] - 165s 1s/step - loss: 0.0177 - accuracy: 0.9942 - val_loss: 0.0043 - val_accuracy: 0.9993\n",
+      "120/120 [==============================] - 154s 1s/step - loss: 0.0213 - accuracy: 0.9919 - val_loss: 0.0143 - val_accuracy: 0.9960\n",
       "Epoch 9/20\n",
-      "120/120 [==============================] - 169s 1s/step - loss: 0.0697 - accuracy: 0.9832 - val_loss: 0.0314 - val_accuracy: 0.9881\n",
+      "120/120 [==============================] - 2169s 18s/step - loss: 0.0143 - accuracy: 0.9955 - val_loss: 0.0206 - val_accuracy: 0.9934\n",
       "Epoch 10/20\n",
-      "120/120 [==============================] - 167s 1s/step - loss: 0.0102 - accuracy: 0.9971 - val_loss: 0.0020 - val_accuracy: 0.9993\n",
+      "120/120 [==============================] - 2196s 18s/step - loss: 0.0207 - accuracy: 0.9935 - val_loss: 0.0127 - val_accuracy: 0.9940\n",
       "Epoch 11/20\n",
-      "120/120 [==============================] - 166s 1s/step - loss: 0.0291 - accuracy: 0.9903 - val_loss: 0.2209 - val_accuracy: 0.9285\n"
+      "120/120 [==============================] - 1397s 12s/step - loss: 0.0131 - accuracy: 0.9958 - val_loss: 0.0060 - val_accuracy: 0.9980\n",
+      "Epoch 12/20\n",
+      "120/120 [==============================] - 508s 4s/step - loss: 0.0106 - accuracy: 0.9974 - val_loss: 0.0022 - val_accuracy: 0.9993\n",
+      "Epoch 13/20\n",
+      "120/120 [==============================] - 504s 4s/step - loss: 0.0754 - accuracy: 0.9825 - val_loss: 0.0231 - val_accuracy: 0.9927\n",
+      "Epoch 14/20\n",
+      "120/120 [==============================] - 499s 4s/step - loss: 0.0194 - accuracy: 0.9940 - val_loss: 0.0017 - val_accuracy: 1.0000\n",
+      "Epoch 15/20\n",
+      "120/120 [==============================] - 499s 4s/step - loss: 0.0360 - accuracy: 0.9885 - val_loss: 0.0183 - val_accuracy: 0.9934\n",
+      "Epoch 16/20\n",
+      "120/120 [==============================] - 2650s 22s/step - loss: 0.0156 - accuracy: 0.9953 - val_loss: 0.0062 - val_accuracy: 0.9974\n",
+      "Epoch 17/20\n",
+      "120/120 [==============================] - 163s 1s/step - loss: 0.0107 - accuracy: 0.9971 - val_loss: 0.0276 - val_accuracy: 0.9907\n",
+      "Epoch 18/20\n",
+      "120/120 [==============================] - 156s 1s/step - loss: 0.0107 - accuracy: 0.9966 - val_loss: 2.8252e-04 - val_accuracy: 1.0000\n",
+      "Epoch 19/20\n",
+      "120/120 [==============================] - 151s 1s/step - loss: 0.0054 - accuracy: 0.9984 - val_loss: 3.9692e-04 - val_accuracy: 1.0000\n",
+      "Epoch 20/20\n",
+      "120/120 [==============================] - 153s 1s/step - loss: 0.0441 - accuracy: 0.9877 - val_loss: 0.0057 - val_accuracy: 0.9987\n"
      ]
     }
    ],
@@ -333,6 +352,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4f1e90d7-db71-4a01-88e8-984bec583f28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save full model\n",
+    "model.save(\"../outputs/mildew_model.keras\")\n",
+    "\n",
+    "# Also save JSON + weights\n",
+    "model_json = model.to_json()\n",
+    "with open(\"../outputs/mildew_model_architecture.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)\n",
+    "\n",
+    "model.save_weights(\"../outputs/mildew_model_weights.h5\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7250bd29-53ad-4bd2-b30f-9d8949fd5ca4",
    "metadata": {},
@@ -347,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1bb07f04-d1a5-4734-8d8a-2737cbd78b7a",
    "metadata": {},
    "outputs": [],
@@ -374,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cfcf1d0b-bea0-412c-b6ea-3888cec7e259",
    "metadata": {},
    "outputs": [],
@@ -382,6 +419,35 @@
     "# with open(\"../outputs/training_history.pkl\", \"rb\") as f:\n",
     "#    history_data = pickle.load(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "103c46c9-5c1c-4de0-b5c6-52d4477a7da9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensorflow-cpu==2.13.0\n",
+      "tensorflow-estimator==2.13.0\n",
+      "tensorflow-io-gcs-filesystem==0.37.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze | grep tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d85bdb1-8e1c-4cbc-8d0d-6f0cd9cb07be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
