Updated 04_DataPreprocessing.ipynb to save augmented image

--- a/jupyter_notebooks/04_DataPreprocessing.ipynb
+++ b/jupyter_notebooks/04_DataPreprocessing.ipynb
@@ -171,6 +171,7 @@
     "    plt.axis(\"off\")\n",
     "    plt.title(\"Augmented Sample\")\n",
     "plt.suptitle(\"Augmented Images from Training Set\")\n",
+    "plt.savefig(\"../outputs/plots/augmented_sample\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
